--- a/manifests/multi-node-trainer.yaml
+++ b/manifests/multi-node-trainer.yaml
@@ -1,109 +1,114 @@
-apiVersion: batch/v1
-kind: Job
+apiVersion: kubeflow.org/v1
+kind: PyTorchJob
 metadata:
-  name: megatron-train-job-0
+  name: megatron-pytorchjob
 spec:
-  template:
-    spec:
-      containers:
-      - name: megatron-train
-        image: nvcr.io/nvidia/pytorch:23.06-py3
-        imagePullPolicy: IfNotPresent
-        command: ["sleep", "infinity"]
-        tty: true
-        env:
-        - name: NODE_RANK
-          value: "0"
-        securityContext:
-          runAsUser: 0
-        volumeMounts:
-          - name: megatron-dev
-            mountPath: /mnt/pvc
-          - name: dshm
-            mountPath: /dev/shm
-        resources:
-          requests:
-            cpu: 32
-            memory: 512Gi
-            nvidia.com/gpu: 8
-          limits:
-            cpu: 32
-            memory: 512Gi 
-            nvidia.com/gpu: 8
-      volumes:
-        - name: megatron-dev
-          persistentVolumeClaim:
-            claimName: megatron-dev
-        - emptyDir:
-            medium: Memory
-          name: dshm
-      affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-            - matchExpressions:
-              - key: topology.kubernetes.io/region
-                operator: In
-                values: 
-                - LAS1
-              - key: gpu.nvidia.com/class
-                operator: In
-                values:
-                - A40
-      restartPolicy: Never
-  backoffLimit: 2
----
-apiVersion: batch/v1
-kind: Job
-metadata:
-  name: megatron-train-job-1
-spec:
-  template:
-    spec:
-      containers:
-      - name: megatron-train
-        image: nvcr.io/nvidia/pytorch:23.06-py3
-        imagePullPolicy: IfNotPresent
-        command: ["sleep", "infinity"]
-        tty: true
-        env:
-        - name: NODE_RANK
-          value: "1"
-        securityContext:
-          runAsUser: 0
-        volumeMounts:
-          - name: megatron-dev
-            mountPath: /mnt/pvc
-          - name: dshm
-            mountPath: /dev/shm
-        resources:
-          requests:
-            cpu: 32
-            memory: 512Gi
-            nvidia.com/gpu: 8
-          limits:
-            cpu: 32
-            memory: 512Gi 
-            nvidia.com/gpu: 8
-      volumes:
-        - name: megatron-dev
-          persistentVolumeClaim:
-            claimName: megatron-dev
-        - emptyDir:
-            medium: Memory
-          name: dshm
-      affinity:
-        nodeAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-            nodeSelectorTerms:
-            - matchExpressions:
-              - key: topology.kubernetes.io/region
-                operator: In
-                values: 
-                - LAS1
-              - key: gpu.nvidia.com/class
-                operator: In
-                values:
-                - A40
-      restartPolicy: Never
-  backoffLimit: 2
+  pytorchReplicaSpecs:
+    Master:
+      replicas: 1
+      template:
+        metadata:
+          annotations:
+            sidecar.istio.io/inject: "false"
+        spec:
+          containers:
+          - name: megatron-train
+            image: nvcr.io/nvidia/pytorch:23.06-py3
+            imagePullPolicy: IfNotPresent
+            command:
+            - "/mnt/pvc/coreweave-megatron/pretrain_multi_node.sh"
+            tty: true
+            env:
+            - name: GPUS_PER_NODE
+              value: "2"
+            securityContext:
+              runAsUser: 0
+            volumeMounts:
+              - name: megatron-dev
+                mountPath: /mnt/pvc
+              - name: dshm
+                mountPath: /dev/shm
+            resources:
+              requests:
+                cpu: 32
+                memory: 512Gi
+                nvidia.com/gpu: 1
+              limits:
+                cpu: 32
+                memory: 512Gi 
+                nvidia.com/gpu: 1
+          volumes:
+            - name: megatron-dev
+              persistentVolumeClaim:
+                claimName: megatron-dev
+            - emptyDir:
+                medium: Memory
+              name: dshm
+          affinity:
+            nodeAffinity:
+              requiredDuringSchedulingIgnoredDuringExecution:
+                nodeSelectorTerms:
+                - matchExpressions:
+                  - key: topology.kubernetes.io/region
+                    operator: In
+                    values: 
+                    - LAS1
+                  - key: gpu.nvidia.com/class
+                    operator: In
+                    values:
+                    - A40
+          restartPolicy: Never
+    Worker:
+      replicas: 2
+      template:
+        metadata:
+          annotations:
+            sidecar.istio.io/inject: "false"
+        spec:
+          containers:
+          - name: megatron-train
+            image: nvcr.io/nvidia/pytorch:23.06-py3
+            imagePullPolicy: IfNotPresent
+            command:
+            - "/mnt/pvc/coreweave-megatron/pretrain_multi_node.sh"
+            tty: true
+            env:
+            - name: GPUS_PER_NODE
+              value: "2"
+            securityContext:
+              runAsUser: 0
+            volumeMounts:
+              - name: megatron-dev
+                mountPath: /mnt/pvc
+              - name: dshm
+                mountPath: /dev/shm
+            resources:
+              requests:
+                cpu: 32
+                memory: 512Gi
+                nvidia.com/gpu: 1
+              limits:
+                cpu: 32
+                memory: 512Gi 
+                nvidia.com/gpu: 1
+          volumes:
+            - name: megatron-dev
+              persistentVolumeClaim:
+                claimName: megatron-dev
+            - emptyDir:
+                medium: Memory
+              name: dshm
+          affinity:
+            nodeAffinity:
+              requiredDuringSchedulingIgnoredDuringExecution:
+                nodeSelectorTerms:
+                - matchExpressions:
+                  - key: topology.kubernetes.io/region
+                    operator: In
+                    values: 
+                    - LAS1
+                  - key: gpu.nvidia.com/class
+                    operator: In
+                    values:
+                    - A40
+          restartPolicy: Never
