feat: allow configurable batch sizes

--- a/manifests/multi-node-trainer.yaml
+++ b/manifests/multi-node-trainer.yaml
@@ -30,6 +30,10 @@ spec:
               value: "768"
             - name: N_HEADS
               value: "12"
+            - name: M_BS
+              value: "1"
+            - name: G_BS
+              value: "16"
             securityContext:
               runAsUser: 0
             volumeMounts:
@@ -93,6 +97,10 @@ spec:
               value: "768"
             - name: N_HEADS
               value: "12"
+            - name: M_BS
+              value: "1"
+            - name: G_BS
+              value: "16"
             securityContext:
               runAsUser: 0
             volumeMounts:
